--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex - MapaDev Week</title>
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/cartao.css">
+    <link rel="stylesheet" href="src/css/listagem.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
+
     <link rel="shortcut icon" href="src/imagens/pokebola.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon aberto tipo-eletrico">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -39,14 +48,14 @@
                             <h3>Habilidades</h3>
                             <ul>
                                 <li>Choque do Trovão</li>
-                                <li>Cabeçada</li>
+                                <li>Ataque Rápido</li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-grama">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbassauro</h2>
@@ -81,7 +90,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-fogo">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
@@ -115,7 +124,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-agua">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
@@ -150,7 +159,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-fantasma">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
@@ -185,7 +194,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-dragao">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
@@ -225,7 +234,7 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon">
+                    <li class="pokemon ativo">
                         <img src="src/imagens/cabeca-pikachu.png" alt="cabeça do pikachu">
                         <span>Pikachu</span>                       
                     </li>
@@ -235,7 +244,7 @@
                     </li>
                     <li class="pokemon">
                         <img src="src/imagens/cabeca-charmander.png" alt="cabeça do charmander">
-                        <span>Charmande</span>                       
+                        <span>Charmander</span>                       
                     </li>
                     <li class="pokemon">
                         <img src="src/imagens/cabeca-gyarados.png" alt="cabeça do gyarados">
