--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokédex - MapaDev Week</title>
+    <title>Pokédex - Projeto Devemdobro</title>
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/cartao.css">
@@ -21,7 +21,7 @@
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon aberto tipo-eletrico">
+                <div class="cartao-pokemon aberto tipo-eletrico" id="cartao-pikachu">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -55,7 +55,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon tipo-grama">
+                <div class="cartao-pokemon tipo-grama" id="cartao-bulbassauro">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbassauro</h2>
@@ -90,7 +90,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon tipo-fogo">
+                <div class="cartao-pokemon tipo-fogo" id="cartao-charmander">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
@@ -124,7 +124,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon tipo-agua">
+                <div class="cartao-pokemon tipo-agua" id="cartao-gyarados">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
@@ -159,7 +159,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon tipo-fantasma">
+                <div class="cartao-pokemon tipo-fantasma" id="cartao-gengar">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
@@ -194,7 +194,7 @@
 
                 </div>
 
-                <div class="cartao-pokemon tipo-dragao">
+                <div class="cartao-pokemon tipo-dragao" id="cartao-dragonite">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
@@ -234,27 +234,27 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon ativo">
+                    <li class="pokemon ativo" id="pikachu">
                         <img src="src/imagens/cabeca-pikachu.png" alt="cabeça do pikachu">
                         <span>Pikachu</span>                       
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="bulbassauro">
                         <img src="src/imagens/cabeca-bulbasaur.png" alt="cabeça do bulbassauro">
                         <span>Bulbassauro</span>                       
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="charmander">
                         <img src="src/imagens/cabeca-charmander.png" alt="cabeça do charmander">
                         <span>Charmander</span>                       
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="gyarados">
                         <img src="src/imagens/cabeca-gyarados.png" alt="cabeça do gyarados">
                         <span>Gyarados</span>                       
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="gengar">
                         <img src="src/imagens/cabeca-gengar.png" alt="cabeça do gengar">
                         <span>Gengar</span>                       
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="dragonite">
                         <img src="src/imagens/cabeca-dragonite.png" alt="cabeça do dragonite">
                         <span>Dragonite</span>                       
                     </li>
@@ -262,6 +262,7 @@
             </nav>
         </div>
     </main>
-</body>
 
+    <script src="src/js/index.js"></script>
+</body>
 </html>
